Disable biased locking testing